--- a/final-report/paper.tex
+++ b/final-report/paper.tex
@@ -11,7 +11,7 @@
 %Define one of these to see comments (or not)
 %\def\Comment#1{}
 \def\Comment#1{\noindent\textbf{\textsl{\large $\langle!\langle$#1$\rangle!\rangle$}}}
-\def\proj{MoVirt}
+\def\proj{Harmony}
 
 \title{\proj : Secure Desktop Applications on Mobile Devices}
 \author{Will Dietz, Kevin Larson, Shivaram Venkataraman\\
