small cleanliness/grammar changes

--- a/final-report/abstract.tex
+++ b/final-report/abstract.tex
@@ -1,3 +1,3 @@
 \begin{abstract}
-    Modern day smartphones are plagued with vulnerabilities.  As the smartphone adoption continues to increase, and more sensitive usage and information migrates to smartphones, these vulnerabilities simply are not acceptable.  We developed \emph{\proj}, a system for mobile devices that use light-weight OS-level virtualization to contain and isolate applications to increase security on these devices.  Our system has neglible overhead (0-5\%), while providing strong security guarantees for the applications within.  \emph{\proj} is designed to be added onto an existing mobile device to add security guarantees for native applications while maintaining the functionality of the original device experience.  Additionally, \emph{\proj} allows the use of desktop linux applications on smartphones (while guaranteeing a secure execution context) enabling a much wider variety of applications to be run on mobile devices than would previously be possible.
+    Modern day smartphones are plagued with vulnerabilities.  As the smartphone adoption continues to increase, and more sensitive usage and information migrates to smartphones, these vulnerabilities simply are not acceptable.  We developed \emph{\proj}, a system for mobile devices that use light-weight OS-level virtualization to contain and isolate applications to increase security on these devices.  Our system has neglible overhead (0-5\%), while providing strong security guarantees for the applications within.  \emph{\proj} is designed to be added to an existing mobile device to add security guarantees for native applications while maintaining the functionality of the original device experience.  Additionally, \emph{\proj} allows the use of desktop linux applications on smartphones (while guaranteeing a secure execution context) enabling a much wider variety of applications to be run on mobile devices than would previously be possible.
 \end{abstract}
