--- a/final-report/intro.tex
+++ b/final-report/intro.tex
@@ -1,5 +1,5 @@
 \section{Introduction}
-Modern mobile devices run third party applications to perform complex tasks like web browsing, banking and gaming. Recent studies have found that smart-phones are the target of an increasing number of malware attacks \cite{bose2006mobile, cybercriminals2007banks, iphone2010seriot} and their security is important as personal data such as contacts, credit card numbers and passwords are often stored on the device. While some security models \cite{androidsecurity} provide a stronger process level isolation among applications, operating system bugs such as \cite{sms2009iphone,opencore2009android,kernel2009vulnerability} allow malicious applications to take over the device. Recent reports have even found that some smart phones had the Mariposa botnet pre-installed \cite{mariposa2009android}. Virtualization can be useful for secure isolation of third party code from confidential data and provide greater defense-in-depth against attacks on the system.\\
+Today, mobile devices run third party applications to perform complex tasks like web browsing, banking and gaming. Recent studies have found that smart-phones are the target of an increasing number of malware attacks \cite{bose2006mobile, cybercriminals2007banks, iphone2010seriot} and their security is important as personal data such as contacts, credit card numbers and passwords are often stored on the device. While some security models \cite{androidsecurity} provide a stronger process level isolation among applications, operating system bugs such as \cite{sms2009iphone,opencore2009android,kernel2009vulnerability} allow malicious applications to take over the device. Recent reports have even found that some smart phones had the Mariposa botnet pre-installed \cite{mariposa2009android}. Virtualization can be useful for secure isolation of third party code from confidential data and provide greater defense-in-depth against attacks on the system.\\
 
 In recent years, virtual machines have become prevalent in cluster computing environments \cite{gartner2009virtual} as they provide isolation for shared usage of machines in a data center. As a result of hardware improvements, smart phone configurations found today resemble desktop machines from few years ago and many of them run commodity operating systems. There is a growing interest in academia \cite{cox2007pocket} and industry \cite{vmware2009nextfrontier} about the benefits of virtualization on these devices. Virtualization provides better security guarantees in mobile devices than current solutions offer as well enabling useful applications like environment migration. \\
 
