hueg spell checkage

--- a/final-report/conclusion.tex
+++ b/final-report/conclusion.tex
@@ -1,5 +1,5 @@
 \section{Conclusion}
 \label{sec:conclusion}
-Today's smartphones are insecure, and often attempt to curb that by limiting the manner of applications that can be executed.  We built and evaluted \emph{\proj} to address both these issues, providing a framework to allow the execution of desktop linux applications on mobile devices, as well as providing a safe execution environment for both the new apps and any native application the device wants to run.  Our evaluation shows that \emph{\proj} does not sacrifice performance while achieving this, and we demonstrate our success in bringing X11 applications to mobile devices.  Most importantly, \emph{\proj} was built to \emph{add} to the existing device experience, not alter or supplant it, making it suitable and desirable to add to many mobile platforms.
+Today's smartphones are insecure, and often attempt to curb that by limiting the manner of applications that can be executed.  We built and evaluated \emph{\proj} to address both these issues, providing a framework to allow the execution of desktop linux applications on mobile devices, as well as providing a safe execution environment for both the new apps and any native application the device wants to run.  Our evaluation shows that \emph{\proj} does not sacrifice performance while achieving this, and we demonstrate our success in bringing X11 applications to mobile devices.  Most importantly, \emph{\proj} was built to \emph{add} to the existing device experience, not alter or supplant it, making it suitable and desirable to add to many mobile platforms.
 
 Finally all of our work (source, modifications, build environments, packaging) are available at the following URL: \url{http://wdtz.org/cs523}, available generally under open-source licenses such as the GPL.
