--- a/final-report/impl.tex
+++ b/final-report/impl.tex
@@ -11,7 +11,7 @@ Despite the fact the Pre and the Android are both running Linux OSes on an ARM c
 \Comment{CLEANUP}
 While experimenting with new kernels on our WebOS devices, we encountered an issue that took some work to get around.  Like many mobile devices the Palm Pre ships with a number of binary modules for which the source is unavailable.  For example, the wifi drivers ``sd8xxx.ko'' and ``uap8xxx.ko'' ship with the device, but are not open-source and so all we have is the final binary module.  This is not uncommon for linux drivers, but presents us with two issues, both having to do with maintaining the ABI. \\
 
-    The first issue is simpler, regarding the 'MODVERSIONS' config option in the kernel \cite{modversions}.  This config option serves the purpose of help identify symbols by their contents and functionality by appending a CRC of related information to the symbol name.  This was an issue because our changes modified slightly (if not functionally) the definitions of some code, and resulted in mismatched version info.  Our solution was to build the kernel without support for this, but the result is less safe checking of loaded modules.  Note that this is not a security concern since loading modules is a priviliged operation anyway, but rather is undesirable to help prevent the careless user from loading modules they should not. \\
+    The first issue is simpler, regarding the 'MODVERSIONS' config option in the kernel \cite{modversions}.  This config option serves the purpose of help identify symbols by their contents and functionality by appending a CRC of related information to the symbol name.  This was an issue because our changes modified slightly (if not functionally) the definitions of some code, and resulted in mismatched version info.  Our solution was to build the kernel without support for this, but the result is less safe checking of loaded modules.  Note that this is not a security concern since loading modules is a privileged operation anyway, but rather is undesirable to help prevent the careless user from loading modules they should not. \\
 
     The second issue is similar but presented more of a challenge was what this locking to a particular ABI meant regarding the kinds of changes we could make.  The Pre ships with a modified version of linux 2.6.24 \cite{pre_kernel}, but full support for LXC was not merged into the linux mainline until 2.6.26 \cite{lxc_kernel}.  In 2.6.24 there is partial LXC support, and we had to backport some of the other pieces.  However we were unable to get full LXC support since some features (such as network namespaces) are rely on significant changes in the kernel architecture.  However, this is not a fault in our design and a device manufacturer most likely would not be faced with this issue, being in the position to acquire or build the related modules for the kernel version they desired. \\
 
