--- a/final-report/design.tex
+++ b/final-report/design.tex
@@ -2,7 +2,7 @@
 \label{sec:design}
 
 \subsection{Secure Isolation}
-The two primary goals of our design is to a. Provide isolation of selected applications on mobile phones and b. To build a usable solution which can be integrated seamlessly into the host operating system of the smartphone. To achieve these goals we either need a type-II hypervisor which can run within the host operating sysystem or employ OS-level virtualization techniques like containers.  Unlike conventional virtualization, containers have almost no overhead as they do not run the entire software stack of the guest operating system.  On the other hand, because the virtualization is facilitated by the operating system, other OSes or architectures cannot be used within a container.In our design, we propose to use operating system level virtualization techniques of which Linux Containers and OpenVZ \cite{OpenVZ} are popular implementations.\\
+The two primary goals of our design is to a. Provide isolation of selected applications on mobile phones and b. To build a usable solution which can be integrated seamlessly into the host operating system of the smartphone. To achieve these goals we either need a type-II hypervisor which can run within the host operating system or employ OS-level virtualization techniques like containers.  Unlike conventional virtualization, containers have almost no overhead as they do not run the entire software stack of the guest operating system.  On the other hand, because the virtualization is facilitated by the operating system, other OSes or architectures cannot be used within a container.  In our design, we propose to use operating system level virtualization techniques of which Linux Containers and OpenVZ \cite{OpenVZ} are popular implementations.\\
  
 \subsection{Linux Containers}
 Linux Containers (LXC) implement OS-level virtualization techniques in order to run a number of isolated virtual environments on a single host.  LXC differs from conventional virtualization techniques, which generally require the installation of guest OSes.  The isolated virtual environments or containers, are built upon other Linux security mechanisms \cite{LSM}. We list the different resources isolated using containers and the techniques used for them below.
@@ -16,7 +16,7 @@ Linux Containers (LXC) implement OS-level virtualization techniques in order to 
 
 
 \subsection{Host Identification}
-On Linux machines, the identity of a system is usually established through the command `uname'. This command reads informations stored in the structure `utsname'. The structure includes the name of the operating system in use and the current version of the operating system. The structure also contains the hostname of the machine and this is used to identify the machine in network communications. Linux Containers implement a per-process utsname namespace and this enables each container to have a different hostname.
+On Linux machines, the identity of a system is usually established through the command `uname'. This command reads information stored in the structure `utsname'. The structure includes the name of the operating system in use and the current version of the operating system. The structure also contains the hostname of the machine and this is used to identify the machine in network communications. Linux Containers implement a per-process utsname namespace and this enables each container to have a different hostname.
 
 \subsection{Process Identifiers}
 Process identifiers (PIDs) are isolated using PID namespaces such that with respect to each container the set of PIDs appears like a standalone machine. This also allows two processes to  have the same PID in different containers. Processes can be launched in a new PID namespace using the clone or the unshare system-calls. This is an important feature for enabling migration of containers between hosts as the same PID values can be maintained at the source and destination. Also, PID namespaces are hierarchical; tasks in the original namespace can see the PIDs of tasks in the new namespace but not vice-versa.  
