--- a/final-report/design.tex
+++ b/final-report/design.tex
@@ -29,8 +29,9 @@ User namespaces were first available in Linux kernel 2.6.23.  User namespaces su
 
 \subsection{Network Devices}The Linux kernel 2.6.26 was the first version to include network namespaces.  The network namespaces assigns a private set of network resources, including IP addresses, routes, sockets, and more, to any number of processes.  This allows for shared names among different namespaces and isolation between those namespaces.  This provides substantial improvements in security, network resource management, namespace consolidation, and mobility.
 
-\subsection{\\Proc Namespaces}
-\Comment{I can't find good documentation of this, could one of you guys do this one?}
+%% Leaving out
+%% \subsection{\\Proc Namespaces}
+%% \Comment{I can't find good documentation of this, could one of you guys do this one?}
 
 \subsection{Readonly-bind mounts}
 Readonly-bind mounts have been available since Linux kernel 2.6.24.  This allows for read-only accesses to a filesystem mounted read-write.  It guarantees that one process can read and write to the filesystem, while others can only write to it, regardless of their privileges.
