--- a/final-report/future.tex
+++ b/final-report/future.tex
@@ -1,10 +1,10 @@
 \section{Future Work}
-We plan to extend our implementation to support additional features.  
+    \emph{\proj} already makes good progress towards making mobile devices secure, and bringing desktop applications into that secure context.  However, we have a few limitations that we hope to address in future work which we describe below.
 \subsection{Live Migration}
-Linux Containers supports the pausing and resuming of containers.  This can be extended to allow for live migration.
+Since we already have the applications running in virtualized containers, an exciting next step would be to support Live Migration.  Linux Containers already supports the pausing and resuming of containers, and future would could build upon this to allow live migration of applications.  Given our implementation choice to use the fairly universal X11, one could use such live migration to move applications to/from desktops or other phones.  There are of course many implementation details to make this practical, but we believe this could be a useful and exciting direction to take our work.
 
 \subsection{Additional Containers Support}
-Due to the Pre's kernel version of 2.6.24, much of the linux containers functionality had to be back ported in order to work with the Pre's kernel.  The network isolation abstraction is built upon functionality in the 2.6.26 kernel.  This allows bridging of the network hardware, which gives each container its own network abstractions. \\
+Due to the Pre's kernel version of 2.6.24, much of the linux containers functionality had to be back ported in order to work with the Pre's kernel.  Unfortunately, a few of the components (such as network namespaces) weren't practical to backport beacuse they rely on important architectural changes between 2.6.24 and 2.6.26.  In future work we could finish backporting these remaining components, or port Palm's kernel changes to the 2.6.26 or later kernel to get full LXC support.
 
-\subsection{Intra-Container Communications}
-With working network bridging, the containers would be able to communicate with eachother via the network. \\
+\subsection{LXC Design}
+Even after full LXC support, a number of important decisions can explored to see their effect on performance, and evaluate their effectiveness regarding security.  In Section \Comment{FIXME} we demonstrated the effects of enabling or disabling IPC namespaces had on a benchmark that used X which ran outside the container.  We ran it outside to enforce the explicit communication channels to be over the explicit X protocol, but a decision could be made to trade performance for that security enhancement.  Other such potential trade-offs include the network topology of the containers and what resources make sense to expose to each container.
