Add description of experiments

--- a/final-report/TODO
+++ b/final-report/TODO
@@ -19,6 +19,9 @@ Add more to Future Work
 
 review all items marked as 'comment' in the paper.
 
+Evaluation:
+Describe experiments in a more exact fashion.
+
 Discussion:
 Quality control and make it fit
 
