--- a/final-report/overview.tex
+++ b/final-report/overview.tex
@@ -1,15 +1,7 @@
-\begin{figure*}[bth]
-\centering
-\includegraphics[width=1.5\columnwidth]{arch}
-\caption{Architecture diagram}
-\label{fig:arch}
-\end{figure*}
-
 \section{Design Overview}
 \label{sec:overview}
+Our architecture has two main components: the virtualization framework, and the integration front-end.  The virtualization framework contains a container-ready kernel as well as each of the spawned containers (see Figure \ref{fig:arch}).  A container could contain one or more applications.  Initially we intended to explore both x86-based Operating Systems as well as ARM based systems.  However, initial results show that x86-based Operating Systems will be far too slow.  Although an x86-based OS would have enabled a more diverse set of target applications, ARM-based systems have less virtualization overhead and some options may not be prohibitively slow.
 
-\label{sec:proposedarch}
-Our architecture has two main components: the virtualization framework, and the integration front-end.  The virtualization framework contains a container-ready kernel as well as each of the spawned containers (see Figure \ref{fig:arch}).  A container could contain one or more applications.  Initially we intended to explore both x86-based Operating Systems as well as ARM based systems.  However, initial results show that x86-based Operating Systems will be far too slow.  Although an x86-based OS would have enabled a more diverse set of target applications, ARM-based systems have less virtualization overhead and some options may not be prohibitively slow. \\
 
 The other component is the integration front-end. This contains a light X-server that has been integrated into the host OS, and also contains the container controller. The controller runs inside the host OS. The controller will be the user interface that controls launching, switching, suspending, resuming, migrating the containers, as well as ensuring the X-server is running properly. \\
 
