fix reference to ipc issue, fix reference to quake figure

--- a/final-report/eval.tex
+++ b/final-report/eval.tex
@@ -47,7 +47,8 @@ From the figure, we can see that the overhead is approximately within 5\%-10\% a
 \end{figure}
 
 \subsection{Quake Time-Demo}
-To measure the overhead of communicating from the container to an X-server running natively, we run the Quake timedemo \Comment{need ref}. The quake binaries were obtained from libsdl.org  and the command used to run the experiments was "quakedemo +timedemo demo2". Figure \ref{fig:quake} presents the running time of the demo in different scenarios. From the graph, we can see that the running time is similar for the stock kernel and the modified kernel. When the experiment is run from within the container, we observe that the running time increases by about 60\%. We attribute this to the fact that the containers are configured to create a new namespace for IPC and hence the application communicates with the X-Server through the loopback interface. When the containers are launched without a isolated IPC namespaces, we find that the performance is similar to that of the stock kernel.
+\label{sec:quake_demo}
+To measure the overhead of communicating from the container to an X-server running natively, we run the Quake timedemo \Comment{need ref}. The quake binaries were obtained from a Palm Pre port of the libsdl.org implementation and the command used to run the experiments was "quakedemo +timedemo demo2". Figure \ref{fig:Quake} presents the running time of the demo in different scenarios. From the graph, we can see that the running time is similar for the stock kernel and the modified kernel. When the experiment is run from within the container, we observe that the running time increases by about 60\%. We attribute this to the fact that the containers are configured to create a new namespace for IPC and hence the application communicates with the X-Server through the loopback interface. When the containers are launched without a isolated IPC namespaces, we find that the performance is similar to that of the stock kernel.
 
 \subsection{LMbench3} 
 \label{sec:LMbench3}
