--- a/final-report/future.tex
+++ b/final-report/future.tex
@@ -7,4 +7,4 @@ Since we already have the applications running in virtualized containers, an exc
 Due to the Pre's kernel version of 2.6.24, much of the linux containers functionality had to be back ported in order to work with the Pre's kernel.  Unfortunately, a few of the components (such as network namespaces) weren't practical to backport beacuse they rely on important architectural changes between 2.6.24 and 2.6.26.  In future work we could finish backporting these remaining components, or port Palm's kernel changes to the 2.6.26 or later kernel to get full LXC support.
 
 \subsection{LXC Design}
-Even after full LXC support, a number of important decisions can explored to see their effect on performance, and evaluate their effectiveness regarding security.  In Section \Comment{FIXME} we demonstrated the effects of enabling or disabling IPC namespaces had on a benchmark that used X which ran outside the container.  We ran it outside to enforce the explicit communication channels to be over the explicit X protocol, but a decision could be made to trade performance for that security enhancement.  Other such potential trade-offs include the network topology of the containers and what resources make sense to expose to each container.
+Even after full LXC support, a number of important decisions can explored to see their effect on performance, and evaluate their effectiveness regarding security.  In Section \ref{sec:quake_demo} we demonstrated the effects of enabling or disabling IPC namespaces had on a benchmark that used X which ran outside the container.  We ran it outside to enforce the explicit communication channels to be over the explicit X protocol, but a decision could be made to trade performance for that security enhancement.  Other such potential trade-offs include the network topology of the containers and what resources make sense to expose to each container.
