"virtualization results"->"why not qemu"

--- a/final-report/discussion.tex
+++ b/final-report/discussion.tex
@@ -15,7 +15,7 @@ The ARM architecture is not strictly virtualizable as there are privileged instr
 User Mode Linux (UML) is a virtualization technique in which the guest operating systems run as user mode processes inside the host. When compared to hypervisors like VMWare ESX or Xen, UML offers a simpler solution and is patched into the Linux kernel source tree. The first version of User Mode Linux used \emph{ptrace} to virtualize system calls and modify and divert them into the user space kernel for execution. Later versions of UML introduced the Separate Kernel Address Space (SKAS) mode  where the UML kernel runs in a different address space from its processes. This addresses security issues by making the UML kernel inaccessible to the UML processes and also provides a noticeable speedup. Also this technique is only effective when the architecture of the guest operating system is the same as the host and hence this fits the design constraints of our problem. User Mode Linux was built originally on the i386 architecture and has since been extended to the PowerPC and x86\_64 architectures. Technically it should be feasible to port UML to ARM architecture. \\
 Some downsides of using UML are that the amount of overhead is relatively large for workloads which have a number of interrupts and the project is not under active development anymore.
 
-\subsection{Virtualization Results}
+\subsection{Why not QEMU}
 
 Given the above results, the only system we were able to evaluate as a solution was QEMU (since the other two were unavailable for our platform).  We evaluated the overhead of virtualization with a QEMU-based implementations running various distributions of Linux on both the Android and the Palm Pre, and the results as given in Table \ref{tab:virt_results}. The most successful implementation used ARM on ARM virtualization and a basic ARM kernel image provided along with QEMU. Unfortunately, even this implementation was far too slow, taking 52 seconds to boot on the Pre and 154 seconds to boot on the Android. Additionally response times were terrible, often taking several seconds to display text input. A Debian ARM Lenny image took over 15 minutes to boot on the Palm Pre and crashed on the Android during boot. x86 emulation on ARM was also tested, with a TTY-Linux image; however, this was the slowest by far, taking over half an hour to boot on the Palm Pre. On the Android, x86 guest mode QEMU would not even run. Overall these experiments suggest that binary translation is not usable and that we need to explore for different virtualization techniques listed in Section \ref{sec:design}.
 
