--- a/final-report/mybib.bib
+++ b/final-report/mybib.bib
@@ -224,3 +224,14 @@ howpublished = {\url{http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2009-22
   organization = {USENIX Association},
   howpublished = {\url{http://lmbench.sourceforge.net/lmbench-usenix.pdf}},
 }
+
+@ARTICLE{tos06unionfs,
+  AUTHOR =       "C. P. Wright and J. Dave and P. Gupta and H. Krishnan and D. P. Quigley and E. Zadok and M. N. Zubair",
+  TITLE =        "Versatility and Unix Semantics in Namespace Unification",
+  JOURNAL =      "ACM Transactions on Storage (TOS)",
+  YEAR =         "2006",
+  VOLUME =       "2",
+  NUMBER =       "1",
+  MONTH =        "February",
+  PAGES =        "1--32",
+}
