--- a/final-report/related.tex
+++ b/final-report/related.tex
@@ -2,12 +2,14 @@
 \label{sec:related}
 Currently, there are many solutions available for virtualization on desktop environments.  VMware is a popular closed source solution which implements a variety of virtualization techniques and is used in both industry and academia.  KVM \cite{kvm}, QEMU \cite{qemu}, and XEN \cite{xen} are all open source solutions, implemented using a variety of virtualization techniques.  These solutions cannot be directly used in mobile environments for performance and usability reasons. \\
 
-Recently there has been a surge of research in the area of mobile virtualization.  One such solution is MobiVMM \cite{mobivmm}, which prioritizes performance and security at the cost of usability and portability.  Work has been done to port KVM to ARM \cite{columbia}, focusing on performance and functionality.  All of these solutions either dual-boot the OS or require disabling the phone's existing runtime stack. \\
+Recently there has been a surge of research in the area of mobile virtualization.  One such solution is MobiVMM \cite{mobivmm}, which prioritizes performance and security at the cost of usability and portability.  Their work has several innovations, using ARM-specific hardware to assist in virtualization.  However, their numbers illustrate a noticable overhead above native execution and demonstrate only the latency overhead of their VMs, not the startup times or the overheads imposed.
 
-VMware's MVP project \cite{mvp} is most similar to ours.  They introduce a very thin Type I hypervisor with an emphasis on usability, performance, and security--without sacrificing the phone's functionality.   However their implementation does not integrate with the host OS, but rather replaces and contains it, with the intention of running multiple OSes.  While this is useful, it is tangential to our work.  Additionally, MVP is still under heavy development, and release has been bumped back to at least 2012.  \\
+There have been efforts to port Xen to the ARM hardware \cite{xen}.  It supports many operations, including secure booting and storage, access controls, booting of multiple OSes, and static memory partitioning.  Unfortunately, the project is still very immature and many Xen tools and features are absent and newer versions of ARM are unsupported.  Additionally, it seems little to no work has been done since 2008. \\
 
-Open Kernel Lab's OKL4 \cite{okl4} is another implementation of a thin Type I hypervisor and is very similar to MVP.  As described in Section \ref{sec:proposedarch}, we aim to provide a Type II Virtual Machine (VM) and prioritize live migration capabilities as well as usability. Instead of virtualizing the existing OS to protect other Virtual Machines, we assume it to be trusted and only isolate third party applications.  This provides for a very different architecture in our implementation. \\
+Work has been done to port KVM to ARM \cite{columbia}, focusing on performance and functionality.  The paper discusses ARM virtualization and covers how it can use dynamic binary translation, translate to trap, and basic block breakpoints to overcome the unvirtualizable hardware of an ARM processor.  They discuss the (significant) portions of KVM, which are hardware (x86) specific, and will need to be modified to support ARM processors.  While promising, the project still only supports a small subset of ARM processors and the project as a whole is still quite immature.  \\
+ 
+VMware's MVP project \cite{mvp} introduces a very thin Type I hypervisor with an emphasis on usability, and security.  However their implementation does not integrate with the host OS, but rather replaces and contains it, with the intention of running multiple OSes.  The goal would be able to run a work OS side by side with a personal OS, isolating secure data from personal data and vice-versa.  While this is useful, it is tangential to our work.  Additionally, MVP is still under heavy development, and release has been bumped back to at least 2012.  \\
 
-There also is ARM's TrustZone \cite{trustzone} which is aimed at creating a secure ``TrustZone'', primarily for use in DRM, bank transactions and other similar setups.  The goal is to protect a specialized app from the rest of the system (and protect, for example, secrets and keys from leaking out of this zone).  We aim to to do the opposite: we trust the host OS and are protecting it, secure data, and other applications from the given guest applications.
+Open Kernel Lab's OKL4 \cite{okl4} is another implementation of a thin Type I hypervisor and is very similar to MVP.  OKL4 has a very small memory footprint and adds minimal overhead to execution times.  It is built upon a lightweight L4 microkernel, and rather than for running multiple OSes, it is designed to run under existing phone and embedded OSes to provide additional isolation, security, and information flow control. \\
 
-
+There also is ARM's TrustZone \cite{trustzone} which is aimed at creating a secure ``TrustZone'', primarily for use in DRM, bank transactions and other similar setups.  The goal is to protect a specialized app from the rest of the system (and protect, for example, secrets and keys from leaking out of this zone).  We aim to to do the opposite: we trust the host OS and are protecting it, secure data, and other applications from the given guest applications. \\
